--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,6 +33,10 @@
   name = "hidevops.io/hiboot"
   version = "0.11.1"
 
+[[constraint]]
+  name = "gopkg.in/yaml.v2"
+  version = "v2.2.1"
+
 [prune]
   go-tests = true
   unused-packages = true
