--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -31,11 +31,7 @@
 
 [[constraint]]
   name = "hidevops.io/hiboot"
-  version = "0.11.1"
-
-[[constraint]]
-  name = "gopkg.in/yaml.v2"
-  version = "v2.2.1"
+  branch = "master"
 
 [prune]
   go-tests = true
